--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,214 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/editTextResult"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:gravity="end"
-        android:inputType="text"
-        android:hint="0"
-        android:focusable="false"
-        android:layout_marginBottom="16dp"/>
+        android:layout_height="match_parent" />
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="*">
-
-        <!-- Row 1 -->
-        <TableRow>
-            <Button
-                android:id="@+id/buttonClear"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="C"
-                android:textSize="24sp"
-                android:onClick="onClearClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/buttonDivide"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="/"
-                android:textSize="24sp"
-                android:onClick="onOperatorClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-        </TableRow>
-
-        <!-- Rows 2-4 (Similar structure as Row 1) -->
-
-        <!-- Row 5 -->
-        <TableRow>
-            <Button
-                android:id="@+id/button7"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="7"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/button8"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="8"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/button9"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="9"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/buttonMultiply"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="*"
-                android:textSize="24sp"
-                android:onClick="onOperatorClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-        </TableRow>
-
-        <!-- Row 6 -->
-        <TableRow>
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="4"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="5"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/button6"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="6"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/buttonMinus"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="-"
-                android:textSize="24sp"
-                android:onClick="onOperatorClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-        </TableRow>
-
-        <!-- Row 7 -->
-        <TableRow>
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="1"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="2"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="3"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/buttonPlus"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="+"
-                android:textSize="24sp"
-                android:onClick="onOperatorClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-        </TableRow>
-
-        <!-- Row 8 -->
-        <TableRow>
-            <Button
-                android:id="@+id/button0"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                android:onClick="onDigitClick"
-                android:layout_weight="2"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/buttonDot"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="."
-                android:textSize="24sp"
-                android:onClick="onDecimalClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-
-            <Button
-                android:id="@+id/buttonEquals"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="="
-                android:textSize="24sp"
-                android:onClick="onEqualsClick"
-                android:layout_weight="1"
-                android:layout_margin="4dp"/>
-        </TableRow>
-
-    </TableLayout>
-
-</LinearLayout>
+</RelativeLayout>
